src/styles/global.css
/*
  The CSS in this style tag is based off of Bear Blog's default CSS.
  https://github.com/HermanMartinus/bearblog/blob/297026a877bc2ab2b3bdfbd6b9f7961c350917dd/templates/styles/blog/default.css
  License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
 */

:root {
	--accent: #2337ff;
	--accent-dark: #000d8a;
	--layout-columns:
		[full-start] minmax(1rem, 1fr)
		[wide-start] minmax(0, 15ch)
		[content-start] minmax(0, 60ch)
		[content-end] minmax(0, 15ch)
		[wide-end] minmax(1rem, 1fr)
		[full-end];
	--black: 15, 18, 25;
	--gray: 96, 115, 159;
	--gray-light: 229, 233, 240;
	--gray-dark: 34, 41, 57;

	/* From https://pudding.cool/2025/07/kids-books/ #FFD85D */
	--yellow-electric-sunshine: 255, 216, 93;

	/* From https://pudding.cool/2025/07/kids-books/ #A3D1ED */
	--blue-royal-light: 163, 209, 237;

	--background-light: rgb(var(--yellow-electric-sunshine));
	--background-light-alternate: rgb(var(--blue-royal-light));
	--foreground-dark: #23261e;
	--gray-gradient: rgba(var(--gray-light), 50%), #fff;
	--box-shadow:
		0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%),
		0 16px 32px rgba(var(--gray), 33%);
}
body {
	font-family: "Alegreya Sans", sans-serif;
	font-weight: 400;
	font-style: normal;
	margin: 0;
	padding: 0;
	display: grid;
	grid-template-columns: var(--layout-columns);
	text-align: left;
	background: var(--background-light);
	word-wrap: break-word;
	overflow-wrap: break-word;
	color: var(--foreground-dark);
	font-size: 20px;
	line-height: 1.7;
}
body > * {
	grid-column: full-start / full-end;
	display: grid;
	grid-template-columns: var(--layout-columns);
}
body > * > * {
	grid-column: content-start / content-end;
}
main {
	margin: 0;
	padding: 0;
}
.full-bleed {
	grid-column: 1 / -1;
	margin: 0;
}
.full-bleed img {
	width: 100%;
	max-width: none;
	border-radius: 0;
	display: block;
}
.wide {
	grid-column: wide-start / wide-end;
	margin: 0;
}
.wide img {
	width: 100%;
	max-width: none;
	border-radius: 0;
	display: block;
}
h1,
h2,
h3,
h4,
h5,
h6 {
	margin: 0 0 0.5rem 0;
	color: rgb(var(--black));
	line-height: 1.2;
}
h1 {
	font-size: 3.052em;
}
h2 {
	font-size: 2.441em;
}
h3 {
	font-size: 1.953em;
}
h4 {
	font-size: 1.563em;
}
h5 {
	font-size: 1.25em;
}
strong,
b {
	font-weight: 700;
}
a {
	font-family: "Alegreya Sans SC", sans-serif;
	font-weight: 400;
	font-style: normal;
	color: var(--foreground-dark);
	text-shadow: 0 1px 1px rgba(255, 255, 255, 1);
	text-decoration: none;
}
a:hover {
	color: var(--foreground-dark);
}
p {
	margin-bottom: 1em;
}
.prose p {
	margin-bottom: 2em;
}
textarea {
	width: 100%;
	font-size: 16px;
}
input {
	font-size: 16px;
}
table {
	width: 100%;
}
img {
	max-width: 100%;
	height: auto;
	border-radius: 8px;
}
code {
	padding: 2px 5px;
	background-color: rgb(var(--gray-light));
	border-radius: 2px;
}
pre {
	padding: 1.5em;
	border-radius: 8px;
}
pre > code {
	all: unset;
}
blockquote {
	border-left: 4px solid var(--accent);
	padding: 0 0 0 20px;
	margin: 0;
	font-size: 1.333em;
}
hr {
	border: none;
	border-top: 1px solid rgb(var(--gray-light));
}
@media (max-width: 720px) {
	body {
		font-size: 18px;
	}
	main {
		padding: 1.5em 0;
	}
	.wide {
		grid-column: 1 / -1;
	}
}

.sr-only {
	border: 0;
	padding: 0;
	margin: 0;
	position: absolute !important;
	height: 1px;
	width: 1px;
	overflow: hidden;
	/* IE6, IE7 - a 0 height clip, off to the bottom right of the visible 1px box */
	clip: rect(1px 1px 1px 1px);
	/* maybe deprecated but we need to support legacy browsers */
	clip: rect(1px, 1px, 1px, 1px);
	/* modern browsers, clip-path works inwards from each corner */
	clip-path: inset(50%);
	/* added line to stop words getting smushed together (as they go onto separate lines and some screen readers do not understand line feeds as a space */
	white-space: nowrap;
}

